# django-fastapi

./: .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml
docker/nginx/: Dockerfile
docker/nginx/conf.d.dev/: app.conf
docker/nginx/conf.d.prod/: app.conf
docker/python/: Dockerfile
src/: pyproject.toml
src/app/: Makefile  gunicorn.py  main.py  pyproject.toml
src/app/app/: db.py
src/app/app/controllers/: admin_controller.py  sample_controller.py
src/app/resources/admin/: index.html
src/auth/: Makefile  gunicorn.py  pyproject.toml
src/auth/app/: urls.py
src/auth/app/views/: all_other_views.py  api_auth_view.py
src/auth/config/: settings.py  urls.py
src/auth/templates/: base.html
