[tool.poetry]
name = "django-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
django-allauth = "^0.42.0"
django-extensions = "^3.0.4"
django-environ = "^0.4.5"
orator = "^0.9.9"
fastapi = "^0.60.1"
uvicorn = "^0.11.8"
jinja2 = "^2.11.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
