[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
requests = "^2.23.0"
gunicorn = "^20.0.4"
orator = "^0.9.9"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
bpython = "^0.19"
flake8 = "^3.8.3"
pylint = "^2.5.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
